<resources>
    <string name="app_name">AgeCalculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name</string>
    <string name="age">Age</string>
    <string name="user_s_age_details">Users Age Details</string>
    <string name="last_name">Last Name</string>
    <string name="back">Back</string>
    <string name="age_text">"%1d years ,  %2d month, %3d days."</string>
    <string name="enter_first_name">Enter First Name *</string>
    <string name="enter_last_name">Enter Last Name *</string>
    <string name="select_date_of_birth">Select Date of Birth *</string>
    <string name="next">Next</string>
    <string name="year_month_day">Year - Month - Day</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="first_name_error_text">Please enter First Name.</string>
    <string name="last_name_error_text">Please enter Last Name.</string>
    <string name="dob_error_text">Please select Date of Birth.</string>
    <string name="common_error">Something went wrong.</string>
</resources>