<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.UserProfileFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/first_name_label"
        style="@style/text_bold_ww"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/enter_first_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/first_name_edit_text"
        style="@style/edit_text_style"
        android:hint="@string/first_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_label" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/last_name_label"
        style="@style/text_bold_ww"
        android:layout_marginStart="10dp"
        android:text="@string/enter_last_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_edit_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/last_name_edit_text"
        style="@style/edit_text_style"
        android:hint="@string/last_name"
        android:imeOptions="actionDone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_label" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dob_label"
        style="@style/text_bold_ww"
        android:layout_marginStart="10dp"
        android:text="@string/select_date_of_birth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_edit_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dob_date"
        style="@style/edit_text_style"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/enter_dob"
        android:inputType="none"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dob_label" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dob_date" />

</androidx.constraintlayout.widget.ConstraintLayout>